Saving paths to a json file
