# src/db/models/plan.py
@@ -29,3 +29,11 @@ class RoutePlanRequest(BaseModel):
 class NameSearchResult(BaseModel):
     name: str
     location: Location
+
+
+class RouteSaveRequest(BaseModel):
+    route: Route
+
+class RouteSaveResponse(BaseModel):
+    message: str
+    saved_at: str
